--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -32,3 +32,30 @@
 .demo-container > *{
   margin-top: 10px;
 }
+.btn {
+  background: linear-gradient(90deg, #8bcabc 0%, #99eabd 100%);
+
+  color: #fff;
+  padding: 0.4em 1.5em;
+  border: none;
+  border-radius: 12px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 2px 8px rgba(46, 133, 85, 0.15);
+  transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
+}
+.btn:hover,
+.btn:focus {
+  background: linear-gradient(90deg, #2e8555 0%, #25c2a0 100%);
+
+  /* background: linear-gradient(90deg, #8bcabc 0%, #99eabd 100%); */
+  transform: translateY(-2px) scale(1.03);
+  box-shadow: 0 4px 16px rgba(46, 133, 85, 0.25);
+  outline: none;
+}
+
+.btn:active {
+  transform: translateY(0) scale(1);
+  box-shadow: 0 2px 8px rgba(46, 133, 85, 0.15);
+}
